--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -27,6 +27,7 @@
     <p>I have been enrolled in a front-end course so that I can understand<br>
     the basics of front-end development</p>
     <p>so far I have understood the fundamentals of git and github</p>
+    
     <h3>My passion</h3>
     <p>I really enjoy learning new skills</p>
     <ul>
@@ -34,9 +35,13 @@
          <li>Motion Graphics</li>
          <li>Music</li>
         </ul>
+        </article>
+        <article>
          <a href="https://efficientsolutions.co.ke/"  target="_blank" >
              <img src = "https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" width=200px height=200x
              alt="alx logo"></a>
+             </article>
+             <article>
              <table>
                 <thead>
                <tr>
