--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -9,10 +9,13 @@
      <link href="base.css" rel="stylesheet">
   
 </head>
-<body>
+<body class="works_on_smartphone">
+  <article>
      <header>
     <h1>Hi,<br> I'm John Ngugi</h1>
     <p>I build stunning websites using HTML, CSS and javaSript</p>
+     </article>
+     <article>
     <nav>
     <ul>
          <li><a href="/index.html">Home</a></li>
@@ -20,14 +23,16 @@
         
         </ul>
 </nav>
+</article>
     </header>
     <main>
         <article>
     <h2>My progress</h2>
-    <p>I have been enrolled in a front-end course so that I can understand<br>
+    <p>I have been enrolled in a front-end course so that I can understand
     the basics of front-end development</p>
     <p>so far I have understood the fundamentals of git and github</p>
-    
+    </article>
+    <article>
     <h3>My passion</h3>
     <p>I really enjoy learning new skills</p>
     <ul>
