--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -18,6 +18,7 @@
      <article>
     <nav>
     <ul>
+          <li class="logo">&#129399;</li>
          <li><a href="/index.html">Home</a></li>
          <li><a href="/tweets.html">Tweets</a></li>
         
