--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -8,49 +8,59 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <img src="CSS Advanced/smile.png" alt="logo">
+   <body>
+    <header class="top-header">
+        <nav class="nav-bar">
+            <div class="logo-group">
+                <img src="CSS Advanced/smile.png" alt="SmileSchool logo">
+                <p>SmileSchool</p>
+            </div>
           
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">COURSE</a></li>
                 <li><a href="#">PRICING</a></li>
                 <li><a href="#">LOGIN</a></li>
             </ul>
         </nav>
-        
     </header>
+
     <main>
-        <section>
-            <div>
+        <!-- HERO SECTION -->
+        <section class="hero">
+            <div class="hero-content">
                 <h1>Get schooled</h1>
-                <span>SMILES</span>
-                <span>GRIN</span>
-                <span>LAUGH</span>
-                <button>REGISTER FOR FREE</button>
+                <div class="hero-tags">
+                    <span>SMILES</span>
+                    <span>GRIN</span>
+                    <span>LAUGH</span>
+                </div>
+                <button class="primary-btn">REGISTER FOR FREE</button>
             </div>
-            <div>
-                <h2>Learn from the pros</h2>
-                <div>
-                    <div>
-                        <img src="CSS Advanced/1.png" alt="Phillip Massey,Smile of the year 2018 -2019" width="150" height="150">
+
+            <div class="pros">
+                <h2><span class="purple">Learn</span> from the pros</h2>
+                <div class="pros-grid">
+                    <div class="pro-card">
+                        <img src="CSS Advanced/1.png" alt="Phillip Massey, Smile of the year 2018 - 2019">
                         <h3>Phillip Massey</h3>
-                        <p>« Smile of the year » 2018 - 2019</p>
+                        <p> « Smile of the year »</p>
+                        <p>2018 - 2019</p>
                     </div>
-                    <div>
-                        <img src="CSS Advanced/3.png" alt="Nannie Lawrence, Best little smile 2017Z ">
+                    <div class="pro-card">
+                        <img src="CSS Advanced/3.png" alt="Nannie Lawrence, Best little smile 2017">
                         <h3>Nannie Lawrence</h3>
-                        <p>Best « little smile » 2017</p>
+                        <p>Best « little smile » </p>
+                        <p>2017</p>
                     </div>
-                    <div>
-                        <img src="CSS Advanced/2.png" alt="Best Friend Smile live performance 2019" width="150" height="150">
+                    <div class="pro-card">
+                        <img src="CSS Advanced/2.png" alt="Bruce Walters, Best Friend Smile live performance 2019">
                         <h3>Bruce Walters</h3>
-                        <p>Best « Friend Smile » live performance 2019</p>
+                        <p>Best « Friend Smile » </p><p>live performance 2019</p>
                     </div>
-                    <div>
-                        <img src="CSS Advanced/4.png" alt="24h smiles winner 2016 - 2019">
+                    <div class="pro-card">
+                        <img src="CSS Advanced/4.png" alt="Henry Hughes, 24h smiles winner 2016 - 2019">
                         <h3>Henry Hughes</h3>
-                        <p>« 24h smiles » winner 2016 - 2019</p>
+                        <p>« 24h smiles » </p><p>winner 2016 - 2019</p>
                     </div>
                 </div>
             </div>
