add styles to section 2

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -65,14 +65,14 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section class="quote">
             <div>
-                <img src="CSS Advanced/5.png" alt="image">
+                <img src="CSS Advanced/5.png" alt="image" width="160" height="160">
             </div>
-            <div>
+            <div class="quote-content">
                 <blockquote>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</blockquote>
-                <h3>NAME</h3>
-                <P>weather presenter</P>
+                <h3>Person Name</h3>
+                <P><em>weather presenter</em></P>
             </div>
         </section>
         <section>
