add style to footer section

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -221,15 +221,19 @@
         </section>
     </main>
     <footer>
-        <section>
-            <div>
+        <section class="footer">
+            <div class="display">
+            <div class="bottom-lg">
                 <img src="CSS Advanced/logo.png" alt="logo">
-                <div>
+                </div>
+                <div class="icons">
                     <i class="fa-brands fa-facebook"></i>
                     <i class="fa-brands fa-twitter"></i>
                     <i class="fa-brands fa-instagram"></i>
                 </div>
+                </div>
             </div>
+            
             <p>©smileschool 2020</p>
         </section>
     </footer>
